@@ -169,15 +169,14 @@ class DirectiveError(Exception):
     instead!
     """
 
-    def __init__(self, level, message, source, line):
+    def __init__(self, level, message, spot):
         """
-        Initialize with message `message`.  `level` is a system message level.
+        Initialize with `message`, system message `level`, and error `spot`
         """
         Exception.__init__(self)
         self.level = level
         self.msg = message
-        self.source = source
-        self.line = line
+        self.spot = spot
 
 
 class Directive(object):
@@ -315,13 +314,8 @@ class Directive(object):
         You'd often use self.error(message) instead, which will
         generate an ERROR-level directive error.
         """
-        # source = self.state_machine.get_source(self.lineno - 1)
-        try:
-            (source, line) = self.state_machine.input_lines.info(self.lineno)
-        except IndexError:
-            source = self.state_machine.get_source(self.lineno - 1)
-            line = self.lineno
-        return DirectiveError(level, message, source, line)
+        spot = self.state_machine.get_source_spot(self.lineno - 1)
+        return DirectiveError(level, message, spot)
 
     def debug(self, message):
         return self.directive_error(0, message)
